[fix] truncate long datapoints in Ui
This commit fixes problems that occurs when datapoints are too longs:
- in list view, long datapoints are ellipsed if they overflow
- in card view, long datapoints are letter-breakables

--- a/client/app/styles/app/_list.styl
+++ b/client/app/styles/app/_list.styl
@@ -24,9 +24,19 @@
 
     [role=gridcell]
         flex 3
+        min-width 0
         horizontally-spaced .5em
 
         color grey-05
+
+
+        dt
+            display flex
+
+        .value
+            min-width 0
+            overflow hidden
+            text-overflow ellipsis
 
 
     .name
